[gd_scene load_steps=2 format=3 uid="uid://d4c64xkt5edlu"]

[ext_resource type="Script" path="res://HUD.gd" id="1_g2p24"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_g2p24")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -148.0
offset_right = 50.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="RestartButton" type="Button" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -148.0
offset_right = 50.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -83.0
offset_right = 50.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
